--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
         :root {
             --royal-blue: #1e40af;
             --royal-glow: rgba(30, 64, 175, 0.4);
-            --bg-dark: #0b0f1a;
-            --bg-darker: #0e1628;
-            --glass-base: rgba(255, 255, 255, 0.03);
-            --glass-border: rgba(255, 255, 255, 0.08);
+            --bg-dark: #070a13;
+            --bg-darker: #0a0f1d;
+            --glass-base: rgba(15, 23, 42, 0.85);
+            --glass-border: rgba(255, 255, 255, 0.12);
         }
         
         body { 
             font-family: 'Inter', sans-serif; 
-            background: radial-gradient(circle at 50% -20%, #1e3a8a44, transparent),
+            background: radial-gradient(circle at 50% -20%, #1e3a8a66, transparent),
                         linear-gradient(135deg, var(--bg-dark), var(--bg-darker));
             color: #f3f4f6;
             min-height: 100vh;
@@ -32,48 +32,34 @@
 
         .glass {
             background: var(--glass-base);
-            backdrop-filter: blur(32px) saturate(200%);
-            -webkit-backdrop-filter: blur(32px) saturate(200%);
+            backdrop-filter: blur(28px) saturate(180%);
+            -webkit-backdrop-filter: blur(28px) saturate(180%);
             border: 1px solid var(--glass-border);
-            box-shadow: 0 12px 48px -12px rgba(0, 0, 0, 0.7);
+            box-shadow: 0 12px 60px -12px rgba(0, 0, 0, 0.6);
         }
 
         .glass-royal {
-            background: linear-gradient(145deg, rgba(30, 64, 175, 0.25), rgba(30, 64, 175, 0.15));
-            backdrop-filter: blur(24px);
-            border: 1px solid rgba(30, 64, 175, 0.35);
-            box-shadow: inset 0 0 25px rgba(30, 64, 175, 0.2), 0 10px 40px rgba(0, 0, 0, 0.4);
+            background: linear-gradient(145deg, rgba(30, 64, 175, 0.45), rgba(30, 64, 175, 0.25));
+            backdrop-filter: blur(20px);
+            border: 1px solid rgba(59, 130, 246, 0.4);
+            box-shadow: inset 0 0 25px rgba(30, 64, 175, 0.2), 0 10px 40px rgba(0, 0, 0, 0.5);
         }
 
         .glass-interactive {
-            background: rgba(255, 255, 255, 0.02);
-            backdrop-filter: blur(12px);
-            border: 1px solid rgba(255, 255, 255, 0.08);
-            transition: all 0.4s cubic-bezier(0.23, 1, 0.32, 1);
-        }
-
-        .glass-interactive:active {
-            transform: scale(0.96);
-            background: rgba(30, 64, 175, 0.1);
-            border-color: rgba(30, 64, 175, 0.4);
+            background: rgba(255, 255, 255, 0.08);
+            backdrop-filter: blur(16px);
+            border: 1px solid rgba(255, 255, 255, 0.15);
+            transition: all 0.3s cubic-bezier(0.23, 1, 0.32, 1);
         }
 
         .scrollbar-hide::-webkit-scrollbar { display: none; }
         .scrollbar-hide { -ms-overflow-style: none; scrollbar-width: none; }
 
-        @keyframes messageIn {
-            from { opacity: 0; transform: translateY(16px) scale(0.97); }
-            to { opacity: 1; transform: translateY(0) scale(1); }
-        }
-        .animate-message {
-            animation: messageIn 0.5s cubic-bezier(0.16, 1, 0.3, 1) forwards;
-        }
-
         .noise-layer {
             position: fixed;
             top: 0; left: 0; width: 100%; height: 100%;
             pointer-events: none;
-            opacity: 0.06;
+            opacity: 0.03;
             background-image: url('https://grainy-gradients.vercel.app/noise.svg');
             z-index: 9999;
         }
@@ -83,21 +69,9 @@
             .safe-bottom { padding-bottom: env(safe-area-inset-bottom); }
         }
 
-        .premium-glow {
-            position: relative;
-        }
-        .premium-glow::before {
-            content: '';
-            position: absolute;
-            inset: -1px;
-            background: linear-gradient(45deg, transparent, rgba(255,255,255,0.1), transparent);
-            border-radius: inherit;
-            z-index: -1;
-            transition: opacity 0.3s;
-            opacity: 0;
-        }
-        .premium-glow:hover::before {
-            opacity: 1;
+        .mask-fade { 
+            mask-image: linear-gradient(to bottom, transparent 0%, black 15%); 
+            -webkit-mask-image: linear-gradient(to bottom, transparent 0%, black 15%); 
         }
     </style>
 <script type="importmap">
@@ -107,7 +81,8 @@
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
     "@google/genai": "https://esm.sh/@google/genai@^1.35.0",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0"
+    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
+    "framer-motion": "https://esm.sh/framer-motion@^11.0.0"
   }
 }
 </script>
